--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,4 @@
-ip="192.168.1.11"
-Adam='Adam123'
-bob='job'
-mom='yes'
-Jhon='132'
-pat="gay"
+ip="192.168.50.239"
+#logins below
+#ex - username="password"
+admin="admin"
