cleaning and added a fact func

--- a/.env
+++ b/.env
@@ -1,39 +1,39 @@
-ip="192.168.137.231"
+ip=""
 #ignore this val
 msgnum="36"
 #saved msg
-2=''
-3=''
-4=''
-5=''
-6=''
-7=''
-8=''
-9=''
-10=''
-11='Chat starts here!!! start typeing to begin'
-12=''
-13='Adam: has logged in'
-14='Adam: hello'
-15='Adam: reee'
-16='Adam: kk os this is still working'
-17='Adam: good'
-18='Adam: good'
-19='Adam: has logged in'
-20='Adam: hello'
-21='Adam: has logged in'
-22='Adam: hello'
-23='Adam - Has started a Quiz'
-24='Adam: !Quiz'
-25='Adam: has logged in'
-26='Adam: hello'
-27='Adam - Has started a Quiz'
-28='Adam - Has started a Quiz'
-29='Adam: !Quiz'
-30='Adam: !join'
-31='Adam: !join'
-32='Adam: has logged in'
-33='Adam: hello'
-34='Adam: ree'
-35='Adam: asdfjkl;'
-36='Adam: asdfghjkl'
+2=""
+3=""
+4=""
+5=""
+6=""
+7=""
+8=""
+9=""
+10=""
+11=""
+12=""
+13=""
+14=""
+15=""
+16=""
+17=""
+18=""
+19=""
+20=""
+21=""
+22=""
+23=""
+24=""
+25=""
+26=""
+27=""
+28=""
+29=""
+30=""
+31=""
+32=""
+33=""
+34=""
+35=""
+36="Chat starts here!!! start typeing to begin"
