--- a/Client/.env
+++ b/Client/.env
@@ -1,4 +1,4 @@
-ip="172.16.61.205"
+ip=""
 #ignore this val
 msgnum="36"
 #saved msg
@@ -36,4 +36,4 @@ msgnum="36"
 33=''
 34=''
 35=''
-36='Chat starts here!!! start typeing to begin'
+36='Chat starts here!! start typing to start!'
